src/content/docs/4.0.1/api/README.md
---
editUrl: false
next: false
prev: false
title: shoukaku
slug: 4.0.1/api/readme
---

## Namespaces

* [Connectors](/4.0.1/api/namespaces/connectors/readme/)
* [Constants](/4.0.1/api/namespaces/constants/readme/)
* [Utils](/4.0.1/api/namespaces/utils/readme/)

## Enumerations

* [LoadType](/4.0.1/api/enumerations/loadtype/)

## Classes

* [Connection](/4.0.1/api/classes/connection/)
* [Connector](/4.0.1/api/classes/connector/)
* [Node](/4.0.1/api/classes/node/)
* [Player](/4.0.1/api/classes/player/)
* [Rest](/4.0.1/api/classes/rest/)
* [Shoukaku](/4.0.1/api/classes/shoukaku/)

## Interfaces

* [Address](/4.0.1/api/interfaces/address/)
* [Band](/4.0.1/api/interfaces/band/)
* [ChannelMixSettings](/4.0.1/api/interfaces/channelmixsettings/)
* [ConnectorMethods](/4.0.1/api/interfaces/connectormethods/)
* [DistortionSettings](/4.0.1/api/interfaces/distortionsettings/)
* [EmptyResult](/4.0.1/api/interfaces/emptyresult/)
* [ErrorResult](/4.0.1/api/interfaces/errorresult/)
* [Exception](/4.0.1/api/interfaces/exception/)
* [FilterOptions](/4.0.1/api/interfaces/filteroptions/)
* [FreqSettings](/4.0.1/api/interfaces/freqsettings/)
* [KaraokeSettings](/4.0.1/api/interfaces/karaokesettings/)
* [LavalinkPlayer](/4.0.1/api/interfaces/lavalinkplayer/)
* [LavalinkPlayerVoice](/4.0.1/api/interfaces/lavalinkplayervoice/)
* [LavalinkPlayerVoiceOptions](/4.0.1/api/interfaces/lavalinkplayervoiceoptions/)
* [LowPassSettings](/4.0.1/api/interfaces/lowpasssettings/)
* [NodeOption](/4.0.1/api/interfaces/nodeoption/)
* [NodeStats](/4.0.1/api/interfaces/nodestats/)
* [NonResumableHeaders](/4.0.1/api/interfaces/nonresumableheaders/)
* [PlayOptions](/4.0.1/api/interfaces/playoptions/)
* [PlayerEvent](/4.0.1/api/interfaces/playerevent/)
* [PlayerUpdate](/4.0.1/api/interfaces/playerupdate/)
* [Playlist](/4.0.1/api/interfaces/playlist/)
* [PlaylistResult](/4.0.1/api/interfaces/playlistresult/)
* [ResumableHeaders](/4.0.1/api/interfaces/resumableheaders/)
* [ResumeOptions](/4.0.1/api/interfaces/resumeoptions/)
* [RotationSettings](/4.0.1/api/interfaces/rotationsettings/)
* [RoutePlanner](/4.0.1/api/interfaces/routeplanner/)
* [SearchResult](/4.0.1/api/interfaces/searchresult/)
* [ServerUpdate](/4.0.1/api/interfaces/serverupdate/)
* [SessionInfo](/4.0.1/api/interfaces/sessioninfo/)
* [ShoukakuOptions](/4.0.1/api/interfaces/shoukakuoptions/)
* [StateUpdatePartial](/4.0.1/api/interfaces/stateupdatepartial/)
* [Structures](/4.0.1/api/interfaces/structures/)
* [TimescaleSettings](/4.0.1/api/interfaces/timescalesettings/)
* [Track](/4.0.1/api/interfaces/track/)
* [TrackEndEvent](/4.0.1/api/interfaces/trackendevent/)
* [TrackExceptionEvent](/4.0.1/api/interfaces/trackexceptionevent/)
* [TrackResult](/4.0.1/api/interfaces/trackresult/)
* [TrackStartEvent](/4.0.1/api/interfaces/trackstartevent/)
* [TrackStuckEvent](/4.0.1/api/interfaces/trackstuckevent/)
* [UpdatePlayerInfo](/4.0.1/api/interfaces/updateplayerinfo/)
* [UpdatePlayerOptions](/4.0.1/api/interfaces/updateplayeroptions/)
* [VoiceChannelOptions](/4.0.1/api/interfaces/voicechanneloptions/)
* [WebSocketClosedEvent](/4.0.1/api/interfaces/websocketclosedevent/)

## Type Aliases

* [LavalinkResponse](/4.0.1/api/type-aliases/lavalinkresponse/)
* [NodeInfo](/4.0.1/api/type-aliases/nodeinfo/)
* [PlayerEventType](/4.0.1/api/type-aliases/playereventtype/)
* [Severity](/4.0.1/api/type-aliases/severity/)
* [TrackEndReason](/4.0.1/api/type-aliases/trackendreason/)

## Variables

* [AllowedPackets](/4.0.1/api/variables/allowedpackets/)
