src/content/docs/4.1.0/api/README.md
---
editUrl: false
next: false
prev: false
title: shoukaku
slug: 4.1.0/api/readme
---

## Namespaces

| Namespace | Description |
| ------ | ------ |
| [Connectors](/4.1.0/api/namespaces/connectors/readme/) | - |
| [Constants](/4.1.0/api/namespaces/constants/readme/) | - |
| [Utils](/4.1.0/api/namespaces/utils/readme/) | - |

## Enumerations

| Enumeration | Description |
| ------ | ------ |
| [LoadType](/4.1.0/api/enumerations/loadtype/) | - |
| [PlayerEventType](/4.1.0/api/enumerations/playereventtype/) | - |

## Classes

| Class | Description |
| ------ | ------ |
| [Connection](/4.1.0/api/classes/connection/) | Represents a connection to a Discord voice channel |
| [Connector](/4.1.0/api/classes/connector/) | - |
| [Node](/4.1.0/api/classes/node/) | Represents a Lavalink node |
| [Player](/4.1.0/api/classes/player/) | Wrapper object around Lavalink |
| [Rest](/4.1.0/api/classes/rest/) | Wrapper around Lavalink REST API |
| [RestError](/4.1.0/api/classes/resterror/) | - |
| [Shoukaku](/4.1.0/api/classes/shoukaku/) | Main Shoukaku class |

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Address](/4.1.0/api/interfaces/address/) | - |
| [Band](/4.1.0/api/interfaces/band/) | - |
| [ChannelMixSettings](/4.1.0/api/interfaces/channelmixsettings/) | - |
| [ConnectorMethods](/4.1.0/api/interfaces/connectormethods/) | - |
| [DistortionSettings](/4.1.0/api/interfaces/distortionsettings/) | - |
| [EmptyResult](/4.1.0/api/interfaces/emptyresult/) | - |
| [ErrorResult](/4.1.0/api/interfaces/errorresult/) | - |
| [Exception](/4.1.0/api/interfaces/exception/) | - |
| [FilterOptions](/4.1.0/api/interfaces/filteroptions/) | - |
| [FreqSettings](/4.1.0/api/interfaces/freqsettings/) | - |
| [KaraokeSettings](/4.1.0/api/interfaces/karaokesettings/) | - |
| [LavalinkPlayer](/4.1.0/api/interfaces/lavalinkplayer/) | - |
| [LavalinkPlayerVoice](/4.1.0/api/interfaces/lavalinkplayervoice/) | - |
| [LowPassSettings](/4.1.0/api/interfaces/lowpasssettings/) | - |
| [NodeInfo](/4.1.0/api/interfaces/nodeinfo/) | - |
| [NodeInfoGit](/4.1.0/api/interfaces/nodeinfogit/) | - |
| [NodeInfoPlugin](/4.1.0/api/interfaces/nodeinfoplugin/) | - |
| [NodeInfoVersion](/4.1.0/api/interfaces/nodeinfoversion/) | - |
| [NodeOption](/4.1.0/api/interfaces/nodeoption/) | - |
| [PlayerEvent](/4.1.0/api/interfaces/playerevent/) | - |
| [PlayerUpdate](/4.1.0/api/interfaces/playerupdate/) | - |
| [Playlist](/4.1.0/api/interfaces/playlist/) | - |
| [PlaylistResult](/4.1.0/api/interfaces/playlistresult/) | - |
| [Ready](/4.1.0/api/interfaces/ready/) | - |
| [ResumableHeaders](/4.1.0/api/interfaces/resumableheaders/) | - |
| [RotationSettings](/4.1.0/api/interfaces/rotationsettings/) | - |
| [RoutePlanner](/4.1.0/api/interfaces/routeplanner/) | - |
| [SearchResult](/4.1.0/api/interfaces/searchresult/) | - |
| [ServerUpdate](/4.1.0/api/interfaces/serverupdate/) | Represents the payload from a serverUpdate event |
| [SessionInfo](/4.1.0/api/interfaces/sessioninfo/) | - |
| [ShoukakuOptions](/4.1.0/api/interfaces/shoukakuoptions/) | - |
| [StateUpdatePartial](/4.1.0/api/interfaces/stateupdatepartial/) | Represents the partial payload from a stateUpdate event |
| [Stats](/4.1.0/api/interfaces/stats/) | - |
| [Structures](/4.1.0/api/interfaces/structures/) | - |
| [TimescaleSettings](/4.1.0/api/interfaces/timescalesettings/) | - |
| [Track](/4.1.0/api/interfaces/track/) | - |
| [TrackEndEvent](/4.1.0/api/interfaces/trackendevent/) | - |
| [TrackExceptionEvent](/4.1.0/api/interfaces/trackexceptionevent/) | - |
| [TrackResult](/4.1.0/api/interfaces/trackresult/) | - |
| [TrackStartEvent](/4.1.0/api/interfaces/trackstartevent/) | - |
| [TrackStuckEvent](/4.1.0/api/interfaces/trackstuckevent/) | - |
| [UpdatePlayerInfo](/4.1.0/api/interfaces/updateplayerinfo/) | - |
| [UpdatePlayerOptions](/4.1.0/api/interfaces/updateplayeroptions/) | - |
| [UpdatePlayerTrackOptions](/4.1.0/api/interfaces/updateplayertrackoptions/) | - |
| [VoiceChannelOptions](/4.1.0/api/interfaces/voicechanneloptions/) | - |
| [WebSocketClosedEvent](/4.1.0/api/interfaces/websocketclosedevent/) | - |

## Type Aliases

| Type alias | Description |
| ------ | ------ |
| [LavalinkPlayerVoiceOptions](/4.1.0/api/type-aliases/lavalinkplayervoiceoptions/) | - |
| [LavalinkResponse](/4.1.0/api/type-aliases/lavalinkresponse/) | - |
| [NodeEvents](/4.1.0/api/type-aliases/nodeevents/) | - |
| [NonResumableHeaders](/4.1.0/api/type-aliases/nonresumableheaders/) | - |
| [PlayOptions](/4.1.0/api/type-aliases/playoptions/) | - |
| [PlayerEvents](/4.1.0/api/type-aliases/playerevents/) | - |
| [ResumeOptions](/4.1.0/api/type-aliases/resumeoptions/) | - |
| [Severity](/4.1.0/api/type-aliases/severity/) | - |
| [ShoukakuEvents](/4.1.0/api/type-aliases/shoukakuevents/) | - |
| [TrackEndReason](/4.1.0/api/type-aliases/trackendreason/) | - |

## Variables

| Variable | Description |
| ------ | ------ |
| [AllowedPackets](/4.1.0/api/variables/allowedpackets/) | - |
